--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=auth
-server.port=8181
+server.port=${PORT:8181}
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/petconnect
-spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/petconnect}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:123456}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-jwt.secret=RjVqS3p6U2YwV2ZqS2pQZ0FsRXhVaFhNVXdOZ1dUUT0=
+jwt.secret=${JWT_SECRET:RjVqS3p6U2YwV2ZqS2pQZ0FsRXhVaFhNVXdOZ1dUUT0=}
 jwt.expiration=86400000
