--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,10 +1,10 @@
-FROM maven:3.8.5-openjdk-17 AS build
+FROM maven:3.9.6-openjdk-21 AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-FROM eclipse-temurin:17-jre-alpine
+FROM openjdk:21-jdk-slim
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8181
