--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,10 +1,10 @@
-FROM maven:3.9.6-openjdk-21 AS build
+FROM maven:3.9-openjdk-21-slim AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-FROM openjdk:21-jdk-slim
+FROM openjdk:21-slim
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8181
